--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -20,4 +20,9 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers" />
+      <Folder Include="Services" />
+    </ItemGroup>
+
 </Project>
